--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,20 +1,100 @@
-.signupContainer {
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.loginContainer {
   max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.logo {
+  display: block;
+  max-width: 150px;
+  margin: 0 auto 20px;
+}
+
+.loginTitle {
   text-align: center;
-  padding: 1em;
-  margin: 0 auto;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
 }
-.form-input {
-  width: 100%;
-  padding: 0.5em;
-  margin: 0.5em 0;
-  background-color: white;
-  border-radius: 4px;
-  color: black;
+
+.errorMessage {
+  color: red;
+  text-align: center;
+  margin-bottom: 10px;
 }
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+}
+
 .label-input {
-  text-align: left;
+  margin-bottom: 15px;
+}
+
+.inputLabel {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: #555;
+}
+
+.formInput {
+  width: 94.5%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   color: black;
-  font-size: larger;
-  font-weight: 600;
+  font-size: 14px;
+  background-color: white;
+}
+
+.submitButton {
+  width: 100%;
+  padding: 10px;
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: #1d1d1d;
+}
+
+@media (max-width: 480px) {
+  .loginContainer {
+    margin: 20px;
+    padding: 15px;
+  }
+
+  .logo {
+    max-width: 100px;
+    margin-bottom: 15px;
+  }
+
+  .loginTitle {
+    font-size: 20px;
+  }
+
+  .formInput {
+    padding: 8px;
+    font-size: 12px;
+  }
+
+  .submitButton {
+    padding: 8px;
+    font-size: 14px;
+  }
 }
