--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,11 +1,36 @@
 .profile-page-container {
   padding: 20px;
-  max-width: 300px;
-  background: #dbc9c9;
-  border-radius: 10px;
-  text-align: left;
-  margin: 20px 20px 0px 20px;
+  max-width: 800px;
+  margin: 0 auto;
 }
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
 .profile-details {
-  margin: 10px;
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.profile-details p {
+  font-size: 16px;
+  margin: 10px 0;
+}
+
+.profile-details strong {
+  color: #555;
+}
+
+.error-message {
+  color: red;
+  font-size: 15px;
+}
+
+p {
+  margin: 0;
 }
